update links in HCAR entry

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -70,8 +70,8 @@ come hang out in the \texttt{\#diagrams} IRC channel on freenode.
 
 \FurtherReading
 \begin{compactitem}
-\item \url{http://projects.haskell.org/diagrams}
-\item \url{http://projects.haskell.org/diagrams/gallery.html}
+\item \url{http://diagrams.github.io}
+\item \url{http://diagrams.github.io/gallery.html}
 \item \url{http://haskell.org/haskellwiki/Diagrams}
 \item \url{http://github.com/diagrams}
 \item \url{http://ozark.hendrix.edu/~yorgey/pub/monoid-pearl.pdf}
