update HCAR entry

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -1,6 +1,6 @@
 % diagrams-Bd.tex
-\begin{hcarentry}{diagrams}
-\report{Brent Yorgey}%11/16
+\begin{hcarentry}[updated]{diagrams}
+\report{Brent Yorgey}%05/18
 \status{active development}
 \participants{many}
 \makeheader
