--- a/notes/working.org
+++ b/notes/working.org
@@ -16,30 +16,35 @@
      + [X] local test build
      + [X] upload/revise on Hackage
      + [X] tag
-   + [-] -contrib
-     + [ ] needs circle-packing updated
-       + [ ] emailed Joachim
-       + [ ] updated
+   + [X] -contrib
+     + [X] needs circle-packing updated
+       + [X] emailed Joachim
+       + [X] updated
      + [X] bump upper bounds
      + [X] local test build
-     + [ ] upload/revise on Hackage
-     + [ ] tag
+     + [X] upload/revise on Hackage
+     + [X] tag
    + [X] svg-builder
      + [X] bump upper bounds
      + [X] local test build
      + [X] upload/revise on Hackage
      + [X] tag
-   + [-] -svg
+   + [X] -svg
      + [X] bump upper bounds
-     + [ ] local test build
-       - running
-     + [ ] upload/revise on Hackage
-     + [ ] tag
-   + [ ] -rasterific
+     + [X] local test build
+     + [X] upload/revise on Hackage
+     + [X] tag
+   + [X] -rasterific
+     + [X] bump upper bounds
+     + [X] local test build
+     + [X] upload/revise on Hackage
+     + [X] tag
+   + [ ] statestack
    + [ ] -cairo
    + [ ] -gtk
    + [ ] -builder
    + [ ] -haddock
+   + [ ] BlogLiterately-diagrams
 
 * Current projects
 
