--- a/notes/working.org
+++ b/notes/working.org
@@ -39,9 +39,20 @@
      + [X] local test build
      + [X] upload/revise on Hackage
      + [X] tag
-   + [ ] statestack
+   + [X] statestack
    + [ ] -cairo
+     + currently cabal solver fails with strange errors about gtk2hs
    + [ ] -gtk
+   + [-] texrunner
+     + [X] updated
+     + [X] PR to cchalmers
+     + [ ] released to Hackage
+   + [-] -pgf
+     + [X] updated upper bounds
+     + [X] local test build
+     + [ ] upload/edit
+     + [ ] tag
+   + [ ] -postscript
    + [ ] -builder
    + [ ] -haddock
    + [ ] BlogLiterately-diagrams
