Fix typos in talks
Thanks to codespell

--- a/talks/2013-nyhaskell/diagrams-latex.sty
+++ b/talks/2013-nyhaskell/diagrams-latex.sty
@@ -68,7 +68,7 @@
 \DeclareOptionX{shell}{\dtt@ShellEscapetrue}
 \DeclareOptionX{noshell}{\dtt@ShellEscapefalse}
 \DeclareOptionX{forceshell}{\dtt@ForceShellEscapetrue\dtt@ShellEscapetrue}
-\DeclareOptionX{miktex}{} % dummy (for backwards compatability)
+\DeclareOptionX{miktex}{} % dummy (for backwards compatibility)
 
 % Options for setting output size
 \DeclareOptionX{width}[]{\def\dtt@width{-w #1}}
@@ -95,7 +95,7 @@
 
 
 %% The platform detection code is copied from the ifplatform package
-%% avaialable from: http://tug.ctan.org/tex-archive/macros/latex/contrib/ifplatform/
+%% available from: http://tug.ctan.org/tex-archive/macros/latex/contrib/ifplatform/
 %% Copyright (C) 2007 by Will Robertson & Johannes Groﬂe
 \newif\ifdtt@ShellEscapeEnabled
 \newif\ifwindows
